project/visa/test/assembler/error/duplicated-macro-parameter.asm
macro var x, x
  sleep
  load $x, R0
end
var #1, #2
